--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,8 +24,8 @@
         <div class="row g-3 align-items-center">
 
             <form
-                    action="/"
-                    method="">
+                    th:action="@{/users/login}"
+                    th:method="post">
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
@@ -33,7 +33,6 @@
                     <div class="col-auto">
                         <input type="text"
                                name="username"
-                               required minlength="4" maxlength="20"
                                id="inputUsername"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
@@ -46,7 +45,6 @@
                     <div class="col-auto">
                         <input type="password"
                                name="password"
-                               required minlength="4" maxlength="20"
                                id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
                     </div>
