--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,16 +23,14 @@
     <div class="d-flex justify-content-center ">
         <div class="row g-3">
             <form
-                    action="/"
-                    method="">
+                    th:action="@{/users/register}"
+                    th:method="post">
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
                         <input name="username"
-                               
-                               required minlength="5" maxlength="20"
                                type="text"
                                id="inputUsername"
                                class="form-control"
@@ -40,8 +38,8 @@
                         <small id="usernameError"
                                class="invalid-feedback bg-danger rounded">Username length must be more than 3 characters</small>
 
-                        <small id="usernameUniqueError"
-                               class=" bg-danger rounded">Username is already occupied</small>
+<!--                        <small id="usernameUniqueError"-->
+<!--                               class=" bg-danger rounded">Username is already occupied</small>-->
 
                     </div>
                 </div>
@@ -51,8 +49,7 @@
                         <label for="inputFullName" class="col-form-label ">Full Name</label>
                     </div>
                     <div class="col-auto">
-                        <input name="fullname"
-                               required minlength="5" maxlength="20"
+                        <input name="fullName"
                                type="text"
                                id="inputFullName"
                                class="form-control"
@@ -68,7 +65,6 @@
                     </div>
                     <div class="col-auto">
                         <input name="email"
-								required
                                type="email"
                                id="inputEmail"
                                class="form-control"
@@ -82,11 +78,10 @@
                         <label for="inputAge" class="col-form-label ">Age</label>
                     </div>
                     <div class="col-auto">
-                        <input name="age" required
+                        <input name="age"
                                type="number"
                                id="inputAge"
                                class="form-control"
-                               min="0" max="90"
                                aria-describedby="ageHelpInline">
                         <small id="ageError"
                                class="invalid-feedback  form-text bg-danger rounded">Must be valid age</small>
@@ -98,7 +93,6 @@
                     </div>
                     <div class="col-auto">
                         <input name="password"
-                                required minlength="5" maxlength="20"
                                type="password"
                                id="inputPassword"
                                class="form-control"
@@ -116,7 +110,6 @@
                     </div>
                     <div class="col-auto">
                         <input name="confirmPassword"
-                                required minlength="5" maxlength="20"
                                type="password"
                                id="inputConfirmPassword"
                                class="form-control"
