implemented route service, controller and repo

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -22,7 +22,7 @@
                 <a th:href="@{/about}">About</a>
             </li>
             <li>
-                <a href="/">Add new route</a>
+                <a th:href="@{/routes/add}">Add new route</a>
             </li>
             <li>
                 <a href="/">Profile</a>
