--- a/src/main/resources/templates/add-route.html
+++ b/src/main/resources/templates/add-route.html
@@ -26,8 +26,8 @@
 <!-- Top Container -->
 <div class="row justify-content-center ">
     <form id="add-route-form" class="w-50 rounded text-white mt-5"
-          action="/" 
-          method="/" enctype="multipart/form-data">
+          th:action="@{/routes/add}"
+          th:method="post" enctype="multipart/form-data">
 
         <h3 class="border-left border-light pl-2">Add a new route</h3>
         <div>
@@ -35,8 +35,7 @@
                 <label for="inputName" class="col-form-label ">Name</label>
             </div>
             <div class="form-group">
-                <input name="name" 
-                       required minlength="5" maxlength="20"
+                <input name="name"
                        type="text"
                        id="inputName"
                        class="form-control"
@@ -53,7 +52,6 @@
             </div>
             <div class="form-group">
                     <textarea name="description" 
-                              required minlength="5"
                               id="inputDescription"
                               class="form-control"
                               aria-describedby="inputDescriptionError"></textarea>
@@ -69,7 +67,6 @@
             </div>
             <div class="form-group">
                 <input type="file" name="gpxCoordinates"
-					   required
                        id="inputGpx"
                        class="form-control-file"
                        aria-describedby="inputGpxError">
@@ -80,9 +77,9 @@
         <div>
             <div class="form-group">
                 <label for="level">Level</label>
-                <select id="level" class="custom-select">
+                <select id="level" name="level" class="custom-select">
                     <option value="" selected>Select level</option>
-                    <option value="1" text="ADVANCED">Select level</option>
+                    <option th:each="level: ${levels}" th:text="${level}" th:value="${level}">Select level</option>
                 </select>
             </div>
         </div>
@@ -90,7 +87,7 @@
 
             <div class="form-group">
                 <label for="videoUrl">Video Url (only last eleven characters from Youtube)</label>
-                <input id="videoUrl" type="text"
+                <input id="videoUrl" name="videoUrl" type="text"
                        class="form-control" placeholder="Video url">
             </div>
         </div>
@@ -98,8 +95,8 @@
         <div>
             <div class="form-group p-3">
                 <label class="p-2" for="categories">Categories:</label>
-                <input class="m-3" type="checkbox" name="categories" id="categories"
-                       value="1" text="Category">
+                <input th:each="category: ${categories}" class="m-3" type="checkbox" name="categories" id="categories"
+                       th:value="${category}" th:text="${category}">
 				<br>
             </div>
         </div>
